--- a/src/components/Pikasso/Global.css
+++ b/src/components/Pikasso/Global.css
@@ -90,6 +90,26 @@ li {
     border-bottom: 1px solid #999;
 }
 
+.header-src {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    padding: 15px 10px;
+    font-size: 20px;
+    border-bottom: 1px solid #999;
+}
+
+.src {
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    /* height: 50px; */
+    /* padding: 15px 10px; */
+    background-color: teal;
+}
+
 .box-body-icon {
     padding-right: 10px;
     width: 30px;
@@ -114,7 +134,7 @@ li {
     justify-content: space-between;
     align-items: center;
     margin: 10px;
-    margin-top: 30px;
+    margin-top: 15px;
     padding: 0 20px;
 }
 
@@ -144,6 +164,13 @@ li {
     text-decoration: none;
     border-style: none;
     font-size: 18px;
+}
+
+.input-checked {
+    width: 50%;
+    margin-left: 10px;
+    height: 20px;
+    padding: 10px 15px;
 }
 
 
@@ -197,4 +224,286 @@ li {
     margin-bottom: 10px;
     padding: 10px 15px;
     background-color: rgba(224, 213, 213, 0.596);
+}
+
+
+/* ####################### TABELAS ############## */
+.box-tables {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px auto;
+    width: 1240px;
+    height: 160px;
+    /* background-color: aqua; */
+}
+
+.tb-span {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 5px 10px;
+    width: 30%;
+    height: 30px;
+    padding: 0 15px;
+    border-left: 3px solid #333;
+    background-color: #efefef;
+}
+
+/* ####################### GRADES ############## */
+
+.box-grade {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    width: 1240px;
+    height: 200px;
+    text-align: left;
+}
+
+.grade-list-ul {
+    width: 100%;
+    display: flex;
+
+}
+
+.grade-list-li {
+    display: flex;
+    flex-direction: column;
+}
+
+.grade-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+    /* border: 1px solid #333; */
+}
+
+.grade-content span {
+    margin: 5px;
+    padding: 5px;
+    background-color: #efefef;
+    width: 30px;
+    height: 35px;
+}
+
+
+
+/* ####################### SEQUENCIAS ############## */
+
+.box-space-19 {
+    width: 19px;
+}
+
+.seq-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.box-list-ul {
+    width: 100%;
+}
+
+.sequencia-li {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 30px;
+    margin: 5px;
+    padding: 0 5px;
+    font-size: 12px;
+    background-color: #efefef;
+}
+
+.box-sequencia {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    padding-left: 15px;
+}
+
+.box-sequencia-span {
+    display: flex;
+    align-items: center;
+    border-right: 2px solid #666;
+    height: 30px;
+    padding: 0 5px;
+    font-size: 10px;
+}
+
+.maquina {
+    width: 250px;
+    height: 30px;
+    /* background-color: blueviolet; */
+    
+}
+
+.sequencia {
+    width: 30px;
+}
+
+.op {
+    width: 1000px;
+    height: 30px;
+    /* background-color: cadetblue; */
+}
+
+.pecas-hora {
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    width: 50px;
+    height: 30px;
+}
+
+.romaneio-footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    margin: 10px auto;
+    margin-bottom: 80px;
+}
+
+/* ##########################   MODAL ########################### */
+
+.modal {
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    /* opacity:0; */
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+  }
+
+  .open {
+    display: flex;
+    pointer-events: auto;
+  }
+
+  .close {
+    display: none;
+    pointer-events: auto;
+  }
+
+  .modal-main {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      align-items: center;
+      width: 1240px;
+      min-height: 350px;
+      margin: 40px auto;
+      background-color: #efefef;
+      border-radius: 6px;
+  }
+
+  .modal-bt-close {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      width: 35px;
+      height: 35px;
+      background-color: red;
+      color: #efefef;
+      border-radius: 50%;
+  }
+
+  .modal-bt-close:hover {
+      cursor: pointer;
+      background-color: brown;
+  }
+
+  .modal-header {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      width: 100%;
+      height: 50px;
+      border-bottom: 1px solid #333;
+  }
+
+  .modal-header b {
+    padding: 0 15px;
+    font-size: 24px;
+    color: #333;
+  }
+  .modal-box {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin: 20px auto;
+      width: 90%;
+  }
+
+  .modal-ul {
+      width: 100%;
+  }
+
+  .modal-li {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin-top: 10px;
+      padding: 0 15px;
+      width: 100%;
+      height: 30px;
+      background-color: rgba(0,0,0,0.3  );
+      border-radius: 6px;
+      color: #111;
+  }
+
+  .modal-li span {
+      margin-left: 15px;
+  }
+
+  .modal-bt-save {
+      position: absolute;
+      bottom: 30px;
+      right: 50px;
+      width: 200px;
+      height: 35px;
+      background-color: seagreen;
+      border-style: none;
+      color: #efefef;
+      font-size: 1.1em;
+  }
+
+  .modal-bt-save:hover {
+      cursor: pointer;
+      background-color: darkgreen;
+  }
+
+  .modal-bt-faccao {
+      position: absolute;
+      bottom: 5px;
+      right: 100px;
+      width: 150px;
+      height: 50px;
+      font-size: .9em;
+      background-color: green;
+      color: #efefef;
+      border-style: none;
+  }
+
+  .modal-bt-faccao:hover {
+    cursor: pointer;
+    background-color: darkgreen;
 }
