--- a/src/components/Pikasso/Global.css
+++ b/src/components/Pikasso/Global.css
@@ -132,8 +132,10 @@ li {
 .form-group {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    height: 35px;
     align-items: center;
-    margin: 10px;
+    /* margin: 10px; */
     margin-top: 15px;
     padding: 0 20px;
 }
@@ -508,3 +510,6 @@ li {
     background-color: darkgreen;
 }
 
+.form-group {
+
+}
