--- a/src/components/Pikasso/tables.css
+++ b/src/components/Pikasso/tables.css
@@ -39,6 +39,8 @@
 }
 
 .pagamento-head {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 35px;
     padding: 6px;
@@ -59,6 +61,12 @@
     width: 250px;
     height: 30px;
     padding: 5px 10px;
+}
+
+.pagamentos-tr {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .pagamento-btn {
