--- a/src/pages/Romaneios/romaneio.css
+++ b/src/pages/Romaneios/romaneio.css
@@ -156,8 +156,19 @@ colgroup {background:#F60;}
     justify-content: center;
     align-items: center;
     width: 60%;
-    height: 100px;
+    padding: 10px 15px;
     border-radius: 6px;
     background-color: rgb(236, 236, 152);
-    font-size: 1.5em;
+    font-size: 1.2rem;
+}
+
+/* ########### DELETE ############### */
+.bt-delete {
+    width: 180px;
+    height: 50px;
+    background-color: rgb(201, 44, 44);
+    color: #efefef;
+    font-size: 1.2rem;
+    border-style: none;
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.346);
 }
