--- a/src/components/Pikasso/Global.css
+++ b/src/components/Pikasso/Global.css
@@ -14,7 +14,7 @@ li {
     display: flex;
     flex: 1;
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     background-color: blue;
 }
 
@@ -22,7 +22,7 @@ li {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     padding: 0 15px;
     align-items: center;
     background-color: #efefef;
