--- a/src/pages/Financeiro/financeiro.css
+++ b/src/pages/Financeiro/financeiro.css
@@ -19,3 +19,47 @@
     background-color: #B0E0E6;
 }
 
+/* ##################### menu financeiro ######### */
+
+.menu-financeiro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.ul-menu-financeiro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.li-menu-financeiro {
+    width: 50%;
+    height: 50px;
+    margin: 10px;
+    background-color: #555;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.li-menu-financeiro:hover {
+    cursor: pointer;
+    background-color: #333;
+}
+
+.link-menu-financeiro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: #efefef;
+}
