--- a/src/components/Pikasso/Global.css
+++ b/src/components/Pikasso/Global.css
@@ -560,3 +560,25 @@ li {
 }
 
 
+/* ##################### MODAL ##################### */
+
+.box-modal-global {
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    width: 450px;
+    height: 60px;
+    padding: 15px 10px;
+    background-color: rgb(76, 123, 87);
+    color: #efefef;
+    font-size: 1.3rem;
+    text-align: center;
+    border-radius: 6px;
+    transition: 3s;
+}
+
+.modal-visible {
+    display: none;
+}
+
+
